ADD_SUBDIRECTORY(tests)

SET(WIDGETS_SRCS
	nvWidgets.h
	nvWidgets.cpp
	nvGLWidgets.h
	nvGLWidgets.cpp
	nvGlutWidgets.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# targets
ADD_DEFINITIONS(-DNVWIDGETS_EXPORTS)

IF(NVWIDGETS_SHARED)
	ADD_LIBRARY(nvwidgets SHARED ${WIDGETS_SRCS})
ELSE(NVWIDGETS_SHARED)
	ADD_LIBRARY(nvwidgets ${WIDGETS_SRCS})
ENDIF(NVWIDGETS_SHARED)

TARGET_LINK_LIBRARIES(nvwidgets ${LIBS})

INSTALL(TARGETS nvwidgets
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
