ADD_SUBDIRECTORY(tests)

SET(WIDGETS_SRCS
	nvWidgets.h
	nvWidgets.cpp
	nvGLWidgets.h
	nvGLWidgets.cpp
	nvGlutWidgets.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${GLEW_INCLUDE_PATH} ${GLUT_INCLUDE_PATH})

# targets
ADD_DEFINITIONS(-DNVWIDGETS_EXPORTS)

IF(NVWIDGETS_SHARED)
	ADD_LIBRARY(nvwidgets SHARED ${WIDGETS_SRCS})
ELSE(NVWIDGETS_SHARED)
	ADD_LIBRARY(nvwidgets ${WIDGETS_SRCS})
ENDIF(NVWIDGETS_SHARED)

TARGET_LINK_LIBRARIES(nvwidgets ${GLEW_LIBRARY} ${GLUT_LIBRARY})

INSTALL(TARGETS nvwidgets
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
